Unit tests for stuff + code improvements and refactoring